# ics624_document_retrieval_project

./: .gitignore  evaluations.csv  loader.py  pyproject.toml
encoders/: sbert.py
evaluation/: evaluation.py  mrr.py  timing.py
retrievers/: base.py  bm25.py  dense_retriever.py  hybrid_retriever.py  tf_idf_retriever.py
